fixed z-index for box-shadow on nav

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -5,7 +5,7 @@
   justify-content: center;
   position: fixed;
   bottom: 76px;
-  z-index: 0;
+  z-index: -1;
   height: 80px;
 }
 .chat .chat_bar {
