--- a/public/css/nav.scss
+++ b/public/css/nav.scss
@@ -3,6 +3,7 @@ nav {
     display: flex;
     margin: 15px;
     align-items: center;
+    z-index: 10;
 
     .logo-div {
         flex-grow: 1;
@@ -13,6 +14,7 @@ nav {
     }
 
     ul {
+        box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.116);
         display: flex;
         align-items: center;
         justify-content: space-evenly;
@@ -84,7 +86,7 @@ nav {
                     box-shadow: var(--shadow);
                     align-items: center;
                     padding: 5px 20px;
-                    border-radius: 50px;
+                    border-radius: 5px;
                     transition: 0.2s ease-in-out;
 
                     &:hover {
