--- a/public/css/results.scss
+++ b/public/css/results.scss
@@ -1,6 +1,8 @@
 // check main.js client-side for elements
 
 #results {
+    z-index: -10;
+
     background: blue;
     h2 {
         color: red;
